--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,3 +4,16 @@
   padding: 0;
   overflow: hidden;
 }
+
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+canvas {
+  box-shadow: 2px 2px 20px 1px red;
+}
