--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,8 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -18,4 +20,12 @@ body {
 canvas {
   box-shadow: 2px 2px 20px 1px red;
   border-radius: 6px;
+}
+
+button {
+  border: 2px solid black;
+  background-color: white;
+  border-radius: 8px;
+  padding: 8px;
+  font-weight: bold;
 }
